--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div><button type="button" class="button">Username</button></div>
         <div><button type="button" class="button mt-4">Password</button></div>
 
-        <div class="forgot"><a href="#" class="" style="color: purple;">Forgot Password?</a></div>
+        <div class="forgot"><a href="#" class="" style="color: green;">Forgot Password?</a></div>
         <div><button type="button" class="button mt-4">Login</button></div>
        <div>
         <p class="second">For More details.click on the link below:</p>
